--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
-    "react-native": "0.59.1",
+    "react-native": "^0.60.3",
     "react-native-responsive-screen": "^1.2.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
